--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -948,11 +948,6 @@ de:
       section:
         family: Family
         refugees: Refugees
-  formtastic:
-    hints:
-      update_request:
-        index:
-          email: 
   js:
     ajax_error:
       error: Suchfehler
@@ -1868,54 +1863,6 @@ de:
         Da gibt es oft sprachliche Fehler. Es kann also sein, dass etwas komisch
         klingt. Schau dann lieber noch einmal in den deutschen Text.
   simple_form:
-    hints:
-      contact:
-        show:
-          email: 
-          message: 
-          name: 
-      search_form:
-        agb:
-          query: 
-          search_location: 
-        faq:
-          query: 
-          search_location: 
-        home:
-          query: 
-          search_location: 
-        impressum:
-          query: 
-          search_location: 
-        index:
-          query: 
-          search_location: 
-        not_found:
-          query: 
-          search_location: 
-        privacy:
-          query: 
-          search_location: 
-        show:
-          query: 
-          search_location: 
-      subscription:
-        agb:
-          email: 
-        faq:
-          email: 
-        home:
-          email: 
-        impressum:
-          email: 
-        index:
-          email: 
-        not_found:
-          email: 
-        privacy:
-          email: 
-        show:
-          email: 
     required:
       html: <abbr title="required">*</abbr>
       mark: "*"
@@ -1939,3 +1886,19 @@ de:
     new:
       button: Nachricht erhalten
       email_placeholder: E-Mail Adresse
+  activerecord:
+    attributes:
+      update_request:
+        email: NOTRANSLATE
+        search_location: NOTRANSLATE
+      subscription:
+        email: NOTRANSLATE
+      contact:
+        message: NOTRANSLATE
+        name: NOTRANSLATE
+        email: NOTRANSLATE
+    models:
+      update_request: NOTRANSLATE
+      subscription: NOTRANSLATE
+      contact: NOTRANSLATE
+  success: 
