--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -593,11 +593,6 @@ ru:
       section:
         family: Family
         refugees: Refugees
-  formtastic:
-    hints:
-      update_request:
-        index:
-          email: NOTRANSLATE
   js:
     ajax_error:
       error: "Ошибка в поиске"
@@ -646,7 +641,7 @@ ru:
       option_any: 
       pagination:
         back: 
-        gap: 
+        gap: "..."
         next: 
     search_results:
       bridge: "для"
@@ -719,17 +714,17 @@ ru:
         swa: "Суахили - Kiswahili"
         swe: "Шведский язык - svenska"
         tam: "Тамильский язык - தமிழ்"
-        tel: 
-        tgk: 
-        tha: 
-        tuk: 
-        tur: 
-        urd: 
-        uzb: 
-        vie: 
-        wol: 
-        zho: 
-        zza: 
+        tel: "Телугу - తెలుగు"
+        tgk: "Таджикский язык - тоҷикӣ / تاجیکی"
+        tha: "Тайский язык - ภาษาไทย"
+        tuk: "Туркменский язык - Türkmençe / Tүркменче"
+        tur: "Турецкий язык - Türkçe"
+        urd: "Урду - اردو"
+        uzb: "Узбекский язык - Oʻzbek tili"
+        vie: "Вьетнамский язык - tiếng Việt"
+        wol: "Волоф язык - wɔlɔf"
+        zho: "Китайский язык - 普通话 / 普通話"
+        zza: "Зазаки - Zazaki / Kırmancki"
     single_search_result:
       encounters:
         chat: "Чат"
@@ -1330,7 +1325,7 @@ ru:
         telephone: Tel +49 (0)30 55 57 96 00
         zip_city: 10117 Berlin
   routes:
-    '404': 
+    '404': "'404'"
     contacts: "контакты"
     datenschutzhinweise: 
     definitions: 
@@ -1361,58 +1356,10 @@ ru:
         Поэтому могут встречаться языковые ошибки. Что-то может звучать странно.
         Тогда лучше посмотри еще раз в немецкой версии.
   simple_form:
-    hints:
-      contact:
-        show:
-          email: NOTRANSLATE
-          message: NOTRANSLATE
-          name: NOTRANSLATE
-      search_form:
-        agb:
-          query: 
-          search_location: 
-        faq:
-          query: NOTRANSLATE
-          search_location: NOTRANSLATE
-        home:
-          query: NOTRANSLATE
-          search_location: NOTRANSLATE
-        impressum:
-          query: 
-          search_location: 
-        index:
-          query: NOTRANSLATE
-          search_location: NOTRANSLATE
-        not_found:
-          query: 
-          search_location: 
-        privacy:
-          query: 
-          search_location: 
-        show:
-          query: NOTRANSLATE
-          search_location: NOTRANSLATE
-      subscription:
-        agb:
-          email: 
-        faq:
-          email: NOTRANSLATE
-        home:
-          email: NOTRANSLATE
-        impressum:
-          email: 
-        index:
-          email: NOTRANSLATE
-        not_found:
-          email: 
-        privacy:
-          email: 
-        show:
-          email: NOTRANSLATE
     required:
-      html: NOTRANSLATE
-      mark: NOTRANSLATE
-      text: NOTRANSLATE
+      html: <abbr title="required">*</abbr>
+      mark: "*"
+      text: required
   subscriptions:
     create:
       error: |
@@ -1430,3 +1377,19 @@ ru:
     new:
       button: "Получить сообщение"
       email_placeholder: E-Mail адрес
+  activerecord:
+    attributes:
+      update_request:
+        email: NOTRANSLATE
+        search_location: NOTRANSLATE
+      subscription:
+        email: NOTRANSLATE
+      contact:
+        message: NOTRANSLATE
+        name: NOTRANSLATE
+        email: NOTRANSLATE
+    models:
+      update_request: NOTRANSLATE
+      subscription: NOTRANSLATE
+      contact: NOTRANSLATE
+  success: 
