--- a/config/locales/tr.yml
+++ b/config/locales/tr.yml
@@ -182,16 +182,16 @@ tr:
           answer: "clarat’ta her türlü cinsel tercihi olan çocuklar, gençler ve erişkinler için destek bulunuyor. \nBunlar lezbiyen, homoseksüel, biseksüel, transseksüel ya da iki cinsiyetliler olabilir. \nAncak tüm bu grupları her zaman sayamıyoruz. Çünkü clarat’taki metinler her zaman basit ve kısa olmalıdır. \nBu nedenle  LGBTI kısaltısını kullanıyoruz. Bu tüm bu grupların ingilizce kısaltısıdır. Almanca bir kısaltı yoktur."
           question: Clarat neden <i>LGBTI</i> kısaltmasını kullanıyor?
         question_5:
-          answer: 
+          answer: "clarat'ta her zaman basit bir dil kullanmaktadır. Bu nedenle kolayca anlaşılan kelimeler kullanılmaktadır.\nVe çoğu insanın bildiği kelimeler. Aynı zamanda, siyasal olarak olduğunca doğru olmaya çalışmaktayız.\nBu nedenlerden dolayı, yabancı ya da göç tecrübeli kişiler yerine, göçmenler kelimesini kullanmaktayız. "
           question: Clarat neden <i>göçmen</i> kelimesini kullanıyor?
         question_6:
           answer: "clarat’ta herkesin kimden bahsedildiğini hemen anlamasını istiyoruz. Ve çoğu insan göçmen kelimesini kullanıyor. \nBu yüzden bizde bunu yapıyoruz. clarat’ta her şeye dikkat etmeye çalışıyoruz. Ama herkesin her şeyi anlaması daha önemli. \nBöylece, destek arayan herkes, hızlıca destek bulabilir. "
           question: Clarat neden <i>mülteci</i> kelimesini kullanıyor?
       section_4:
-        heading: 
+        heading: clarat ile ilgili farklı dillerde soruların var mı?
         question_1:
           anchor: how_many_languages
-          answer: 
+          answer: clarat'taki tüm sayfaları Almanca ve İngilizce olarak okuyabilirsin.
           question: Clarat hangi dillerde var?
         question_2:
           answer: "Sayfanın üst tarafinda dil secimini tıklayıp anında Google Translator ile otomatik olarak sayfayı kendi diline tercüme ettirebilirsin. \nNe yazık ki bazen dilsel hatalar olabiliyor. Bu nedenle garip tercümeler oluşabiliyor."
@@ -308,20 +308,22 @@ tr:
   emails:
     offers_index:
       family:
-        heading: 
-        no_results: 
-        toggle_section_html: 
-      obfuscated_email: 
+        heading: "<span id=''secure-email-0>%{email}</span> için clarat family tekliflerin"
+        no_results: "Şuan <span id=''secure-email-0>%{email}</span> için yayınlanmış clarat family teklifleri bulunmamaktadır."
+        toggle_section_html: "<strong>%{count} clarat refugees</strong> tekliflerin"
+      obfuscated_email: e-mail adresin
       refugees:
-        heading: 
-        no_results: 
-        toggle_section_html: 
+        heading: "<span id=''secure-email-0>%{email}</span> için clarat refugees tekliflerin"
+        no_results: "Şuan <span id=''secure-email-0>%{email}</span> için yayınlanmış clarat refugees tekliflerin bulunmamaktadır."
+        toggle_section_html: "<strong>%{count} clarat family</strong>-tekliflerin"
       shared:
-        explanation_1: 
-        explanation_2: 
+        explanation_1: "Burada clarat'taki tüm tekliflerini bir arada görebilirsin. \nBunlar, e-mail adresini bulduğumuz teklifler olmaktadır."
+        explanation_2: Gelecekte yeni tekliflerini bulursak, bunların bağlantılarını burada da bulabileceksin.
         explanation_3: 
-        explanation_4: 
-        info: 
+        explanation_4: |-
+          Yeni teklfilerin clarat'ta yayınlandığında e-mail yolu ile haberdar olmak ister misin?
+          O halde sana yolladığımız e-mailin sonundaki bağlantıyı kullan.
+        info: Bilgi
     subscribe:
       success_html: |
         E-bülten aboneliğine başarıyla kayıt oldun.
@@ -491,11 +493,6 @@ tr:
       section:
         family: Family
         refugees: Refugees
-  formtastic:
-    hints:
-      update_request:
-        index:
-          email: NOTRANSLATE
   js:
     ajax_error:
       error: Arama hatası
@@ -513,8 +510,8 @@ tr:
       get: Konumumu kullan!
       waiting: Konumumu ara... Konumunun kullanılmasına izin vermelisin.
     lang_list_toggle:
-      less: 
-      more: 
+      less: Daha az dil göster
+      more: Daha fazla dil göster
     less_filter_options: Daha az filtre göster
     location_required: |
       Lütfen destek almak istediğin yerin adını gir.
@@ -527,31 +524,33 @@ tr:
     query_field:
       example_placeholder: "örneğin %{word}, …"
       placeholder_words:
-        family: 
-        refugees: 
+        family: |-
+          [''Uyuşturucu'', ''Şiddet'', ''Özel ders'', ''Acil durum'', ''hak'', ''işsiz'', ''eğitim sorunları'', ''yeme bozukluğu'', ''evsiz''
+          ''aile sorunları'', ''hamile'', ''kavga'', ''ikamet ederim'']
+        refugees: "[''Uyruk'', ''Almanca kursu'', ''kabul'', ''savaş travması'', ''iltica işlemleri'', ''sağlık'', ''resmi daireler'', ''ikametgah'']"
     routes:
-      faq: 
+      faq: Sıkça sorulan sorular
     search:
       form_less_label: Arama tercihlerini kapat
       form_more_label: Arama tercihlerini göster
       headlines:
-        age: 
+        age: "Çocuğun yaşı"
         approach: 
-        gender: 
-        language: 
-        target_audience: 
-      option_any: 
+        gender: Cinsiyet
+        language: Dil
+        target_audience: Kim için destek?
+      option_any: fark etmez
       pagination:
-        back: 
-        gap: 
-        next: 
+        back: geri
+        gap: "..."
+        next: ileri
     search_results:
       bridge: için
       enclosing: bulundu
       faq_anchor: burada
       faq_text: 'Sıkça sorulan soruları ve cevapları bulabilirsin '
       language_explanation:
-        connector: 
+        connector: ve
         text: 
       map:
         cooperation: 
@@ -593,7 +592,7 @@ tr:
         hrv: Hırvatça - hrvatski
         hun: Macarca - magyar
         ita: "İtalyanca - italiano"
-        kik: 
+        kik: Kikuyu - Gĩkũyũ
         kur: Kürtçe - کوردی
         lav: Letonca - latviešu
         lit: Litvanca - lietuvių
@@ -607,7 +606,7 @@ tr:
         rom: "Çingenece - Romani"
         ron: Rumence - română
         rus: Rusça - русский
-        snk: 
+        snk: Soninke - Soninkanxaane
         spa: "İspanyolca - español"
         sqi: Arnavutça - Shqipja
         srp: Sırpça - српски
@@ -622,9 +621,9 @@ tr:
         urd: Urduca - اردو
         uzb: "Özbekçe - Oʻzbek tili"
         vie: Vietnamca - tiếng Việt
-        wol: 
+        wol: Wolof - wɔlɔf
         zho: "Çince - 普通话 / 普通話"
-        zza: 
+        zza: Zazaca - Zazaki / Kırmancki
     single_search_result:
       encounters:
         chat: Sohbet
@@ -712,11 +711,11 @@ tr:
           target_audience:
             acquaintances: Tanıdık ve akrabalar için
             children: "Çocuklar ve gençler için"
-            family_acquaintances: 
-            family_children: 
-            family_nuclear_family: 
-            family_parents: 
-            family_pregnant_woman: 
+            family_acquaintances: Tanıdık ve akrabalar için
+            family_children: "Çocuk ve gençler için"
+            family_nuclear_family: Aileler için
+            family_parents: Ebeveynler için
+            family_pregnant_woman: Hamileler için
             nuclear_family: Aileler için
             parents: Ebeveynler için
             pregnant_woman: Hamileler için
@@ -747,7 +746,7 @@ tr:
       last_update: Son kayıt düzenleme tarihi
       next_steps:
         code_word: 
-        heading: 
+        heading: Ne yapmalısın?
       opening_section:
         days:
           fri: Cuma
@@ -758,19 +757,19 @@ tr:
           tue: Salı
           wed: "Çarşamba"
         heading: Ne zaman yapabilirsin?
-      speaking: 
+      speaking: Sana hangi dilde yardımcı olunuyor?
       website_section:
         internet_presence: "İnternette nerede daha fazla bilgi bulabilirim?"
         websites:
-          application_form: 
-          chat: 
-          contact_form: 
+          application_form: Kayıt formu
+          chat: Sohbet
+          contact_form: "İletişim formu"
           document: Daha fazla bilgi al
           facebook: Facebook
-          forum: 
+          forum: Forum
           gplus: Google+
-          online_consulting: 
-          online_course: 
+          online_consulting: Online danışma
+          online_course: Online kurs
           own: Web Sitesi
           pinterest: Pinterest
           twitter: Twitter
@@ -846,18 +845,18 @@ tr:
       title: Hakkımızda
       verena: bir siyaset bilimleri uzmanı. Bu, siyaset ve toplum hakkında çok bilgiye sahip olduğu anlamına geliyor. Bilgi edinme kabiliyeti çok yüksek. Clarat’da araştırma ekibinde yer alıyor ve ansiklopedimiz ile ilgileniyor. En sevdiği şarkı Oh Wonder’in Lose It şarkısı.
     agb:
-      heading: 
+      heading: Yasal Uyarılar
       text_html: NOTRANSLATE
       title: Rechtliche Hinweise
     faq:
-      title: 
+      title: Sıkça sorulan sorular
     home:
       how:
         heading: Clarat nasıl çalışıyor?
         text: Hangi problem için yardıma ihtiyacın olduğunu ya da hangi konunun seni rahatsız ettiğini belirle. Ayrıca menümüzdeki kategorilerden de seçebilirsin. Bu sayede sana en yakın destek önerilerini göreceksin. Sana nasıl yardım alabileceğini de anlatıyoruz. Yardım almak için telefon açabilir, mail atabilir veya şahsen ofisimize gelebilirsin.
       title:
-        family: 
-        refugees: 
+        family: "Çocuk, genç ve aileler için destek programları"
+        refugees: Mülteciler için destek programları
       whom:
         heading: Clarat kimler için var?
         text: Clarat herkes için var. Clarat family çocuklar, gençler ve ailelerin hizmetinde. Clarat refugees mülteciler için. Burada kendin, ailen veya arkadaşlarınla ilgili her soruya ve probleme çözüm bulabilirsin. Yardıma ihtiyacı olan tanıdığın diğer insanlar için de destek veriyoruz.
@@ -877,7 +876,7 @@ tr:
         clarat sana yakınında bulunan destek çeşitlerini gösterecektir.
         Ya da %{start_page} anasayfaya git. Burada daire içindeki resimler yardımıyla, uygun desteği arayabilirsin.
       heading: "Üzgünüz, bu sayfayı bulamadık."
-      link_text: 
+      link_text: burada
       title: 404
     privacy:
       chapter_eight:
@@ -1192,19 +1191,19 @@ tr:
         telephone: Tel +49 (0)30 55 57 96 00
         zip_city: 10117 Berlin
   routes:
-    '404': 
+    '404': "'404'"
     contacts: iletişim
-    datenschutzhinweise: 
-    definitions: 
-    emails: 
+    datenschutzhinweise: Veri koruma uyarıları
+    definitions: tanım
+    emails: emailler
     faq: haeufige-fragen
     haeufige-fragen: haeufige-fragen
     impressum: impressum
-    new: 
+    new: yeni
     offers: hizmetlerimiz
     organizations: organizasyonlar
-    preview: 
-    rechtliche-hinweise: 
+    preview: "Ön izleme"
+    rechtliche-hinweise: Yasal uyarılar
     search_locations: 
     subscribe: 
     subscriptions: 
@@ -1223,58 +1222,10 @@ tr:
         Bu nedenle hatalar oluşabilmektedir. Yani bazı cümleler tuhaf olabilir.
         Bu gibi durumlarda Almanca metne bakman daha doğru olacaktır.
   simple_form:
-    hints:
-      contact:
-        show:
-          email: NOTRANSLATE
-          message: NOTRANSLATE
-          name: NOTRANSLATE
-      search_form:
-        agb:
-          query: 
-          search_location: 
-        faq:
-          query: NOTRANSLATE
-          search_location: NOTRANSLATE
-        home:
-          query: NOTRANSLATE
-          search_location: 
-        impressum:
-          query: 
-          search_location: 
-        index:
-          query: NOTRANSLATE
-          search_location: NOTRANSLATE
-        not_found:
-          query: 
-          search_location: 
-        privacy:
-          query: 
-          search_location: 
-        show:
-          query: NOTRANSLATE
-          search_location: NOTRANSLATE
-      subscription:
-        agb:
-          email: 
-        faq:
-          email: NOTRANSLATE
-        home:
-          email: NOTRANSLATE
-        impressum:
-          email: 
-        index:
-          email: NOTRANSLATE
-        not_found:
-          email: 
-        privacy:
-          email: 
-        show:
-          email: NOTRANSLATE
     required:
-      html: NOTRANSLATE
-      mark: NOTRANSLATE
-      text: NOTRANSLATE
+      html: <abbr title="required">*</abbr>
+      mark: "*"
+      text: required
   subscriptions:
     create:
       error: |
@@ -1293,3 +1244,19 @@ tr:
     new:
       button: Mesaj alınmıştır
       email_placeholder: E-Mail Adresi
+  activerecord:
+    attributes:
+      update_request:
+        email: NOTRANSLATE
+        search_location: NOTRANSLATE
+      subscription:
+        email: NOTRANSLATE
+      contact:
+        message: NOTRANSLATE
+        name: NOTRANSLATE
+        email: NOTRANSLATE
+    models:
+      update_request: NOTRANSLATE
+      subscription: NOTRANSLATE
+      contact: NOTRANSLATE
+  success: 
